--- a/ERPWeb/Views/AgroConfiguration/_GetStockiestPartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetStockiestPartialView.cshtml
@@ -15,6 +15,7 @@
                     <th style="vertical-align:middle">Territory Name</th>
                     <th style="vertical-align:middle">Stockiest Name</th>
                     <th style="vertical-align:middle">Number</th>
+                    <th style="vertical-align:middle">Address</th>
                     <th style="vertical-align:middle">Status</th>
                     <th style="vertical-align:middle">Action</th>
                 </tr>
@@ -33,6 +34,7 @@
                     <td class="text-center">@item.TerritoryName</td>
                     <td class="text-center">@item.StockiestName</td>
                     <td class="text-center">@item.StockiestPhoneNumber</td>
+                    <td class="text-center">@item.StockiestAddress</td>
                     <td class="text-center">@item.Status</td>
                     <td class="text-center hide">@item.StockiestMail</td>
                     <td class="text-center hide">@item.StockiestTradeLicense</td>
