--- a/ERPWeb/Views/AgroConfiguration/GetInvoiceWiseSales.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetInvoiceWiseSales.cshtml
@@ -21,7 +21,7 @@
                             </div>
                             <div class="col-md-6">
                                 <h5 class="text-center text-bold">
-                                    Product Wise Sales Statement
+                                    Invoice Wise Sales Collection
                                 </h5>
                             </div>
                             <div class="col-md-3">
@@ -37,11 +37,11 @@
             <div class="col-md-12">
                 <div class="card card-gray-dark">
                     <div class="card-header">
-                        <div class="row justify-content-center">
+                        <div class="row" style="margin-left:-20px">
                             <div class="col-md-1">
-                                <h6 class="text-left">Search</h6>
+                                <h6 class="text-left" style="font-size:25px" >Search</h6>
                             </div>
-                            <div class="col-md-2">
+                            <div class="col-md-1">
                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search Invoice" />
                             </div>
 
@@ -50,8 +50,12 @@
                             </div>
 
                             <div class="col-md-2">
+                                @Html.DropDownList("ddlTerritoryName", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "--Select Territory--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                            </div>
+
+                            <div class="col-md-2">
                                 <div class="input-group input-group-sm">
-                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate"  placeholder="FromDate"/>
+                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptFromDate" placeholder="FromDate" />
                                     <div class="input-group-prepend cursor-pointer remove-list-date dptFromDate" style="cursor:pointer">
                                         <span class="input-group-text">&#10008;</span>
                                     </div>
@@ -59,7 +63,7 @@
                             </div>
                             <div class="col-md-2">
                                 <div class="input-group input-group-sm">
-                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="ToDate"/>
+                                    <input type="text" class="form-control form-control-sm date-datePicker ctrl-changed" id="dptToDate" placeholder="ToDate" />
                                     <div class="input-group-prepend cursor-pointer remove-list-date dptToDate" style="cursor:pointer">
                                         <span class="input-group-text">&#10008;</span>
                                     </div>
@@ -67,7 +71,7 @@
                             </div>
 
 
-                            <div class="col-md-2">
+                            <div class="col-md-1">
                                 <div class="input-group input-group-sm">
                                     <select class="form-control form-control-sm float-right select2" id="rptType" name="rptType">
                                         <option value="PDF">PDF</option>
@@ -78,6 +82,10 @@
                                     </span>
                                 </div>
                             </div>
+
+                            @*<div class="col-md-1 input-group-append">
+            <button type="button" id="btnDownload" title="Download" class="btn btn-block btn-info btn-flat"><i class="fas fa-download"></i></button>
+        </div>*@
 
                         </div>
                     </div>
@@ -101,6 +109,7 @@
         var rptType = $("#rptType");
         var ddlStokiestName = $("#ddlStokiestName");
         var searchByAny = $("#searchByAny");
+        var ddlTerritoryName = $("#ddlTerritoryName");
 
         $(document).ready(function () {
            
@@ -148,11 +157,11 @@
         })
 
         $("#btnDownload").click(function () {
-            if (dptFromDate.val() == "" && dptToDate.val() == "" && ddlStokiestName.val() == "" && searchByAny.val() == "") {
+            if (dptFromDate.val() == "" && dptToDate.val() == "" && ddlStokiestName.val() == "" && searchByAny.val() == "" && ddlTerritoryName.val()=="") {
                 bootbox.alert("Please Select Anyone");
             }
             else {
-                window.open("/AgroConfiguration/GetInvoiceWiseSalesReport?stockiestId=" + TryParseInt(ddlStokiestName.val(), 0) + " &fromDate=" + dptFromDate.val() + " &toDate=" + dptToDate.val() + " &rptType=" + rptType.val() + "&invoiceNo=" + $.trim(searchByAny.val()));
+                window.open("/AgroConfiguration/GetInvoiceWiseSalesReport?stockiestId=" + TryParseInt(ddlStokiestName.val(), 0) + " &fromDate=" + dptFromDate.val() + " &toDate=" + dptToDate.val() + " &rptType=" + rptType.val() + "&invoiceNo=" + $.trim(searchByAny.val())+"territoryId =" + TryParseInt(ddlTerritoryName.val(), 0));
             }
         })
         
