--- a/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRequistionDetailsbyInfoId.cshtml
@@ -35,14 +35,14 @@
                 <td class="text-center">@item.UnitName</td>
                 <td class="text-center">@item.RequisitionQuantity</td>
                 <td class="text-center" style="color:red">@item.AvailableQty</td>
-
+                @*<td class="text-center">@item.RequisitionQuantity</td>*@
                 <td class="text-center" style="width:10%">
-                    <input type="number" class="issueQty form-control form-control-sm " value="0"  />
-                    <span class="error hide">Quantity must be <=available Quantity</span>
-                </td>
+            <input type="number" class="issueQty form-control form-control-sm " value="0"  />
+            <span class="error hide">Quantity must be <=available Quantity</span>
+        </td>
                 <td class="text-center">@item.Status</td>
                 <td class="text-center">@item.Remarks</td>
-                <td class="hide unitId" >@item.UnitID</td>
+                <td class="hide unitId">@item.UnitID</td>
                 <td class="hide infoId">@item.RawMaterialRequisitionInfoId</td>
                 <td class="hide detailsId">@item.RawMaterialRequisitionDetailsId</td>
                 <td class="hide rawMaterialId">@item.RawMaterialId</td>
