--- a/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateStockiestList.cshtml
@@ -104,7 +104,7 @@
                 </div>
                 <div class="col-md-1">
                     <label for="ddlcreditlimit" class="control-label">Status</label>
-                    <select id="ddlcreditlimit" class="form-control form-control-sm" select2>
+                    <select id="ddlcreditlimit" class="form-control form-control-sm select2" >
                         <option value="0">Select</option>
                         <option value="Active">Active</option>
                         <option value="InActive">InActive</option>
@@ -116,10 +116,11 @@
                     <input type="number" id="numclamountin" class="form-control form-control-sm" />
                     <span class="error hide required-txtclamount font-weight-bold">Input Credit Limit Amount!</span>
                 </div>
-                <div class="col-md-1 form-control-sm" @*style="margin-top:5px;"*@>
-                    <label for="addButton" class="control-label font-weight-bold" style="visibility:hidden"></label>
+
+                <div class="col-md-1">
+                    <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
                     <div class="clearfix">
-                        <button type="submit" class="btn btn-outline-success btn-sm float-left " id="addButton" title="Add To List"><i class="fas fa-plus"></i></button>
+                        <button type="submit" class="btn btn-sm float-right btn-outline-success" id="addButton"><i class="fas fa-plus"></i></button>
                     </div>
                 </div>
             </div>
