--- a/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetStockiestList.cshtml
@@ -72,59 +72,130 @@
 
 </div>
 
-<div class="modal" id="StockiestModal" role="dialog">
-    <div class="modal-dialog" role="document">
+
+
+@*modal*@
+<div class="modal " id="StockiestModal" role="dialog">
+    <div class="modal-dialog modal-xl " style="margin-top:5px" role="document" id="StockiestModal">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-navy">
                 <h4 id="modalHeading" class="modal-title"><span id="spanModalHead"></span></h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
-            <div class="modal-body">
-                <form id="formStockiest">
-                    <input type="hidden" id="hdstockiestId" />
-                    <div class="col-md-10">
-                        <label for="ddlTerritoryName" class="control-label">TerritoryName</label>
-                        @Html.DropDownList("ddlTerritoryName", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "--Select Territory--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
 
+            <div class="card-body text-sm">
+                <div class="row " @*style="margin-top:-18px;"*@>
+                    <input type="hidden" id="hdstockiestId" />
+                    <input type="hidden" id="hdterritorytId" />
+                    <input type="hidden" id="hdareaId" />
+                    <div class="col-md-2">
+                        <label for="ddlareaname" class="control-label">Area Name</label>
+                        @Html.DropDownList("ddlareaname", (IEnumerable<SelectListItem>)ViewBag.ddlareaname, "Select Area", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                        <span class="error hide required-AreaName font-weight-bold">Select Area Name!</span>
+                        <span class="error hide duplicate-AreaName font-weight-bold">Already Area Exist!</span>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="ddlTerritoryName" class="control-label">Area Name</label>
+                        @Html.DropDownList("ddlTerritoryName", (IEnumerable<SelectListItem>)ViewBag.ddlTerritoryName, "Territory", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
+                        <span class="error hide required-AreaName font-weight-bold">Select Area Name!</span>
+                        <span class="error hide duplicate-AreaName font-weight-bold">Already Area Exist!</span>
                     </div>
 
 
+                    @*<div class="col-md-2">
+                            <label class="control-label" for="ddlTerritoryName">TerritoryName</label>
+                            <select id="ddlTerritoryName" class="form-control form-control-sm select2">
+                                <option value="0">Select Territory</option>
+                            </select>
+                            <span class="error hide required-TerritoryName font-weight-bold">Select Territory Name!</span>
+                            <span class="error hide duplicate-TerritoryName font-weight-bold">Already Territory Exist!</span>
+                        </div>*@
 
-                    <div class="col-md-10">
+                    <div class="col-md-2">
                         <label for="txtStockiestName" class="control-label">StockiestName</label>
                         <input type="text" id="txtStockiestName" class="form-control form-control-sm" />
+                        <span class="error hide required-StockiestName font-weight-bold">Input Stockiest Name!</span>
+                        <span class="error hide duplicate-StockiestName font-weight-bold">Already Stockiest Exist!</span>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="txtStockiestAddress" class="control-label">Address</label>
+                        <input type="text" id="txtStockiestAddress" class="form-control form-control-sm" />
+                        <span class="error hide required-StockiestAddress font-weight-bold">Input Stockiest Address!</span>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="txtphonenmbr" class="control-label">Phone Number</label>
+                        <input type="text" id="txtphonenmbr" class="form-control form-control-sm" />
+                        <span class="error hide required-txtphonenmbr font-weight-bold">Input Stockiest Number!</span>
 
                     </div>
-                    <div class="form-group col-md-5">
-                        <label for="ddlStatus" class="control-label">Status</label>
+                    <div class="col-md-2">
+                        <label for="txtemail" class="control-label">Email</label>
+                        <input type="email" id="txtemail" class="form-control form-control-sm" />
+                        <span class="error hide required-txtemail font-weight-bold">Input Stockiest Email!</span>
 
-                        <select id="ddlStatus" class="form-control form-control-sm select2">
+                    </div>
+
+
+
+                </div>
+
+                <div class="row">
+                    <div class="col-md-2">
+                        <label for="txttradelicense" class="control-label">Trade License</label>
+                        <input type="text" id="txttradelicense" class="form-control form-control-sm" />
+                        <span class="error hide required-txttradelicense font-weight-bold">Input Stockiest trade License!</span>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="txtnid" class="control-label">NID</label>
+                        <input type="text" id="txtnid" class="form-control form-control-sm" />
+                        <span class="error hide required-txtnid font-weight-bold">Input Stockiest Nid!</span>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="txtcontactperson" class="control-label">Contact Person</label>
+                        <input type="text" id="txtcontactperson" class="form-control form-control-sm" />
+                        <span class="error hide required-txtcontactperson font-weight-bold">Input Coatact person!</span>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="txtcontactpersonnmbr" class="control-label">Contact Person No</label>
+                        <input type="text" id="txtcontactpersonnmbr" class="form-control form-control-sm" />
+                        <span class="error hide required-txtcontactpersonnmbr font-weight-bold">Input Coatact person Number!</span>
+                    </div>
+                    <div class="col-md-2">
+                        <label for="ddlcreditlimit" class="control-label">Status</label>
+                        <select id="ddlcreditlimit" class="form-control form-control-sm select2" >
+                            <option value="0">Select</option>
                             <option value="Active">Active</option>
                             <option value="InActive">InActive</option>
                         </select>
+                        <span class="error hide req-ddlcreditlimit">Credit Limit Status Is Required</span>
+                    </div>
+                    <div class="col-md-2" id="txtclamount">
+                        <label for="txtclamount" class="control-label">C.L Amount</label>
+                        <input type="number" id="numclamountin" class="form-control form-control-sm" />
+                        <span class="error hide required-txtclamount font-weight-bold">Input Credit Limit Amount!</span>
                     </div>
 
-                </form>
-
-
+                </div>
             </div>
-            <div class="modal-footer btn-light">
+
+
+            <div class="modal-footer  bg-navy">
                 <div class="col-md-6">
                     <div id="msg1" class="alert alert-success hide float-left">
-                        Data has been Successfully Saved
+                        Data has been saved Successful!
                     </div>
                     <div id="msg2" class="alert alert-danger hide float-left">
-                        Data has been faild to Save
+                        Data has been failed to save!
                     </div>
                 </div>
-                <button id="btnCancel" type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
-                <button type="submit" class="btn btn-outline-success btn-sm float-right" id="btnSave"><i class="fas fa-paper-plane"></i> <span id="spanSaveText">Save</span> </button>
+                <button type="button" class="btn btn-outline-danger btn-sm float-right" data-dismiss="modal" data-target="#"><i class="fas fa-paper-plane"></i> Cancel </button>
+                <button type="submit" class="btn btn-outline-success btn-sm float-right" id="btnSave"><i class="fas fa-paper-plane"></i> <span id="spanSaveTextZone">Save</span> </button>
             </div>
+
+
         </div>
     </div>
 </div>
-
-
 
 @section scripts{
 
@@ -132,11 +203,27 @@
     <script type="text/javascript">
 
         var ddlStockiestName = $("#ddlStockiestName");
-        var ddlTerritoryName = $("#ddlTerritoryName");
+
         var ddlTerritoryName1 = $("#ddlTerritoryName1");
-        var txtStockiestName = $("#txtStockiestName");
         var ddlStatus = $("#ddlStatus");
+
+
         var hdstockiestId = $("#hdstockiestId");
+        var hdterritorytId = $("#hdterritorytId");
+        var hdareaId = $("#hdareaId");
+        var txtStockiestName = $("#txtStockiestName");
+        var ddlareaname = $("#ddlareaname");
+        var ddlTerritoryName = $("#ddlTerritoryName");
+        var txtStockiestAddress = $("#txtStockiestAddress");
+        var txtphonenmbr = $("#txtphonenmbr");
+        var txtemail = $("#txtemail");
+        var txttradelicense = $("#txttradelicense");
+        var txtnid = $("#txtnid");
+        var txtcontactperson = $("#txtcontactperson");
+        var txtcontactpersonnmbr = $("#txtcontactpersonnmbr");
+        var ddlcreditlimit = $("#ddlcreditlimit");
+        var txtclamount = $("#txtclamount");
+        var numclamountin = $("#numclamountin");
 
         $(document).ready(function () {
             $('.select2').select2();
@@ -189,8 +276,14 @@
 
             e.preventDefault();
             debugger;
-            var data = { stockiestId: TryParseInt(hdstockiestId.val(), 0), territoryId: TryParseInt(ddlTerritoryName.val(), 0), stockiestName: txtStockiestName.val(), Status: ddlStatus.val() }
+            var data = { StockiestId: TryParseInt(hdstockiestId.val(), 0), TerritoryId: TryParseInt(ddlTerritoryName.val(), 0), AreaId: TryParseInt(ddlareaname.val(), 0), StockiestName: txtStockiestName.val(), StockiestPhoneNumber: txtphonenmbr.val(), StockiestMail: txtemail.val(), StockiestTradeLicense: txttradelicense.val(), StockiestNID: txtnid.val(), StockiestContactPerson: txtcontactperson.val(), StockiestContactPersonPHNumber: txtcontactpersonnmbr.val(), Status: ddlcreditlimit.val(), CreditLimit: numclamountin.val(), StockiestAddress: txtStockiestAddress.val(), }
 
+                 
+                            
+                                
+                     
+                    
+                                      
             if (true) {
                 $.when(postReqWithToken(dataType.applicationJson, dataType.json, "POST", "/AgroConfiguration/UpdateStockiestList", JSON.stringify(data), getToken())).then(function (res, status) {
 
@@ -220,24 +313,59 @@
             var row = $(this).parent().parents('tr');
 
             console.log(row);
-            var stockiestId = row.find('td:eq(4)').html();
-            var territoryId = row.find('td:eq(2)').html();
-            var hid = row.find('td:eq(1)').html();
-            var Status = row.find('td:eq(5)').html();
+
+            var row = $(this).parent().parents('tr');
+            var td1 = row.find('td:eq(1)').html();
+            var td2 = row.find('td:eq(2)').html();
+            var td3 = row.find('td:eq(3)').html();
+            var td4 = row.find('td:eq(4)').html();
+            var td5 = row.find('td:eq(5)').html();
+            var td6 = row.find('td:eq(6)').html();
+            var td7 = row.find('td:eq(7)').html();
+            var td8 = row.find('td:eq(8)').html();
+            var td9 = row.find('td:eq(9)').html();
+            var td10 = row.find('td:eq(10)').html();
+            var td11 = row.find('td:eq(11)').html();
+            var td12 = row.find('td:eq(12)').html();
+            var td13 = row.find('td:eq(13)').html();
+            var td14 = row.find('td:eq(14)').html();
+            var td15 = row.find('td:eq(15)').html();
 
 
 
-            ddlStatus.val(Status);
-            ddlStatus.trigger("change");
-            hdstockiestId.val(hid);
-            console.log(hdstockiestId.val());
-            console.log(hid);
-            txtStockiestName.val(stockiestId);
-            txtStockiestName.trigger("change");
 
-            ddlTerritoryName.val(territoryId);
-            console.log(territoryId);
+
+
+
+            hdstockiestId.val(td1);
+            hdterritorytId.val(td2);
+            hdareaId.val(td3);
+            txtStockiestName.val(td6);
+            ddlareaname.val(td3);
+            ddlareaname.trigger("change");
+            ddlTerritoryName.val(td2);
             ddlTerritoryName.trigger("change");
+            txtStockiestAddress.val(td8);
+            txtphonenmbr.val(td7);
+            txtemail.val(td10);
+            txttradelicense.val(td11);
+            txtnid.val(td12);
+            txtcontactperson.val(td13);
+            txtcontactpersonnmbr.val(td14);
+            ddlcreditlimit.val(td9);
+            numclamountin.val(td15);
+
+            //ddlStatus.val(Status);
+            //ddlStatus.trigger("change");
+
+            //console.log(hdstockiestId.val());
+            //console.log(hid);
+            ////txtStockiestName.val(stockiestId);
+            //txtStockiestName.trigger("change");
+
+            //ddlTerritoryName.val(territoryId);
+            //console.log(territoryId);
+            //ddlTerritoryName.trigger("change");
 
 
             OpenModal();
