--- a/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/SaveRequisition.cshtml
@@ -58,7 +58,7 @@
                     <div class="col-md-2">
                         <label for="" class="control-label font-weight-bold" style="visibility:hidden"> Add To List</label>
                         <div class="clearfix">
-                            <button type="submit" class="btn btn-sm btn-outline-warning" id="addTolist"><i class="fas fa-plus"></i> &nbsp; ADD TO LIST </button>
+                            <button type="submit" class="btn btn-sm btn-outline-warning" id="addTolist"><i class="fas fa-plus"></i></button>
                         </div>
                     </div>
                 </div>
