--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssuePartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialIssuePartialView.cshtml
@@ -29,7 +29,7 @@
                         <td class="hide">@item.RawMaterialIssueStockId</td>
                         
                         <td class="text-center">@item.ProductBatchCode</td>
-                        <td class="text-center">@item.EntryDate</td>
+                        <td class="text-center">@item.EntryDate.Value.ToString("yyyy-MMM-dd")</td>
                         <td class="text-center">@item.UserName</td>
                         <td class="text-center">@item.Status</td>
                         <td class="text-center">
