--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -28,50 +28,51 @@
         @foreach (var item in Model)
         {
             sl = sl + 1;
-            <tr>
-                <td class="text-center text-bold">@sl</td>
-                <td class="hide">@item.ProductSalesInfoId</td>
-                <td class="hide">@item.StockiestId</td>
-                <td class="text-center">@item.InvoiceNo</td>
-                <td class="text-center">@item.InvoiceDate</td>
-                <td class="text-center">@item.StockiestName</td>
-                <td class="text-center">@item.TotalAmount</td>
-                <td class="text-center">@item.PaidAmount</td>
-                <td class="text-center">@item.DueAmount</td>
-                <td class="text-center">@User.UserName</td>
-                @*<td class="hide">@item.UnitId</td>*@
+        <tr>
+            <td class="text-center text-bold">@sl</td>
+            <td class="hide">@item.ProductSalesInfoId</td>
+            <td class="hide">@item.StockiestId</td>
+            <td class="text-center">@item.InvoiceNo</td>
+            <td class="text-center">@item.InvoiceDate.Value.ToString("yyyy-MMM-dd")</td>
+            <td class="text-center">@item.StockiestName</td>
+            <td class="text-center">@item.TotalAmount</td>
+            <td class="text-center">@item.PaidAmount</td>
+            <td class="text-center">@item.DueAmount</td>
+            <td class="text-center">@User.UserName</td>
+            @*<td class="hide">@item.UnitId</td>*@
+            @*<td>@item.EntryDate.Value.ToString("dd-MMM-yyyy hh:mm tt")</td>*@
 
-                <td class="text-center">
+            <td class="text-center">
 
-                    <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-ProductionSalesInfoId" title="View Detail" data-item-detail-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
-                        <i class="fas fa-eye"></i>
-                    </a>
+                <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-ProductionSalesInfoId" title="View Detail" data-item-detail-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                    <i class="fas fa-eye"></i>
+                </a>
 
-                    @*<a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="View Detail" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
-                        <i class="fas fa-money-bill"></i>
-                    </a>*@
+                @*<a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="View Detail" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                <i class="fas fa-money-bill"></i>
+            </a>*@
 
-                    @*<a href="#" class="btn btn-sm btn-outline-success data-edit-item-download" title="Download" data-edit-item-download="@item.ProductSalesInfoId" style="line-height:1"></a>*@
-                    @*}
-        @if (privilege != null && privilege.Edit)
-        {*@
-                    @*<a href="#" class="btn btn-sm btn-outline-success data-item-download" title="Download" id="rptType" name="rptType" data-item-download="@item.ProductSalesInfoId" style="line-height:1">
+                @*<a href="#" class="btn btn-sm btn-outline-success data-edit-item-download" title="Download" data-edit-item-download="@item.ProductSalesInfoId" style="line-height:1"></a>*@
+                @*}
+            @if (privilege != null && privilege.Edit)
+            {*@
+                @*<a href="#" class="btn btn-sm btn-outline-success data-item-download" title="Download" id="rptType" name="rptType" data-item-download="@item.ProductSalesInfoId" style="line-height:1">
 
-            <i class="fas fa-download"></i>
-        </a>*@
+                <i class="fas fa-download"></i>
+            </a>*@
 
-                    <a href="@Url.Action("AgroProductSalesReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Invoice"><i class="fas fa-file-invoice"></i></a>
+                <a href="@Url.Action("AgroProductSalesReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Invoice"><i class="fas fa-file-invoice"></i></a>
 
-                    <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Challan">
-                        <i class="fa-solid fa-receipt"></i>
-                    </a>
-
-
-
+                <a href="@Url.Action("AgroProductSalesChallanReport", "AgroConfiguration", new { @ProductSalesInfoId = item.ProductSalesInfoId })" target="_blank" class="btn btn-sm btn-outline-danger" title="Download Challan">
+                    <i class="fa-solid fa-receipt"></i>
+                </a>
 
 
-                </td>
-            </tr>
+
+
+
+            </td>
+        </tr>
         }
         @if (Model.Count() == 0)
         {
